# rs_physics

./: Cargo.toml  README.md  package.json
.cargo/: config.toml
.github/workflows/: build_and_test.yml  rust.yml
benches/: math_helpers.rs  mod.rs
examples/: basic_simulation.rs  wasm_example.js
rs_physics_wasm/: Cargo.toml
rs_physics_wasm/src/: lib.rs
src/: constants_config.rs  constraint_solvers.rs  constraint_solvers_tests.rs  errors.rs  fluid_dynamics.rs  fluid_simulation.rs  fluid_simulation_tests.rs  forces.rs  forces_tests.rs  interactions.rs  interactions_tests.rs  lib.rs  materials.rs  materials_tests.rs  physics.rs  physics_tests.rs  rotational_dynamics.rs  thermodynamics.rs
src/apis/: easy_physics.rs  mod.rs
src/constraints/: constraint_solvers.rs  constraint_solvers_tests.rs  mod.rs
src/fluid_dynamics/: fluid_dynamics.rs  fluid_dynamics_tests.rs  fluid_simulation.rs  fluid_simulation_tests.rs  mod.rs
src/forces/: forces.rs  forces_2d.rs  forces_2d_tests.rs  forces_tests.rs  mod.rs
src/interactions/: continuous_collision_detection.rs  continuous_collision_detection_tests.rs  gjk_collision_3d.rs  gjk_collision_3d_tests.rs  interactions.rs  interactions_2d.rs  interactions_2d_tests.rs  interactions_3d.rs  interactions_3d_tests.rs  interactions_tests.rs  mod.rs  shape_collisions_3d.rs  shape_collisions_3d_tests.rs
src/materials/: materials.rs  materials_tests.rs  mod.rs
src/models/: mod.rs  object_2d.rs  object_3d.rs  objects.rs  quaternion.rs  shape_3d.rs  simplex.rs
src/particles/: mod.rs  particle.rs  particle_interactions_barnes_hut.rs  particle_interactions_barnes_hut_cosmological.rs  particle_interactions_barnes_hut_cosmological_tests.rs  particle_interactions_barnes_hut_tests.rs  particle_interactions_simd_functions.rs  particle_simulation.rs  particle_simulation_tests.rs  particle_tests.rs
src/physics/: mod.rs  physics.rs  physics_tests.rs
src/rotational_dynamics/: mod.rs  rotational_dynamics.rs  rotational_dynamics_tests.rs
src/thermodynamics/: mod.rs  thermodynamics.rs  thermodynamics_tests.rs
(+5 files in other folders)
