[package]
name = "rs_physics"
authors = ["Brandon White"]
description = "A simple physics library written in Rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[workspace]
members = [
    ".",
    "rs_physics_wasm",
]

[features]
default = []
constraints = []

[dependencies]
rayon = "1.10.0"
log = "0.4"
env_logger = "0.11"
rand = "0.9.0-alpha.2"
