[package]
name = "rs_physics"
authors = ["Brandon White"]
description = "A simple physics library written in Rust"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[workspace]
members = [
    ".",
    "rs_physics_wasm",
]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["constraints", "materials"]
all = ["constraints", "materials", "fluid_simulation", "thermodynamics", "fluid_dynamics", "rotational_dynamics", "particles", "particles-cosmological", "avx512-simd"]
constraints = []
materials = []
fluid_simulation = []
thermodynamics = []
fluid_dynamics = []
rotational_dynamics = []
particles = []
particles-cosmological = []
avx512-simd = []


[dependencies]
rayon = "1.10.0"
log = "0.4"
env_logger = "0.11"
rand = "0.9.0-alpha.2"
approx = "0.5.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "math_helpers"
harness = false